...

  return (
    <Tabs screenOptions={buildTabBarOptions(theme)}>
      <Tabs.Screen
        name="agenda"
        options={{
          title: "Agenda",
          tabBarIcon: tabBarIcon("calendar"),
        }}
      />
      <Tabs.Screen
        name="clientes"
        options={{
...
